Fix html-proofer options and fix accordingly.

--- a/_posts/2008-04-17-29.markdown
+++ b/_posts/2008-04-17-29.markdown
@@ -5,7 +5,7 @@ date: 2008-04-17 08:41:51 +0200
 categories:
 - Life
 ---
-<a href="http://flickr.com/photos/janos/2421694914/"><img src="http://farm4.static.flickr.com/3132/2421694914_e025690f21.jpg" width="500" height="334" border="0" class="image"/></a>
+<a href="http://flickr.com/photos/janos/2421694914/"><img src="http://farm4.static.flickr.com/3132/2421694914_e025690f21.jpg" width="500" height="334" border="0" class="image" alt="Opening a bottle of champagne for my 29th birthday"/></a>
 
 No. This isn't entry number 29. Neither is the 29th day. Not even 29 months.
 
