--- a/_posts/2012-05-21-dinamism.markdown
+++ b/_posts/2012-05-21-dinamism.markdown
@@ -13,7 +13,7 @@ categories:
 - xco
 - bike
 ---
-<a href="http://www.flickr.com/photos/janos/7156995332/" title="Attila Kupas Deak by János Rusiczki, on Flickr"><img src="https://content.rusiczki.net/2012/05/attila-kupas-deak-garage-racing-xco-693x460.jpg" alt="" title="attila-kupas-deak-garage-racing-xco" width="693" height="460" class="alignnone size-medium wp-image-1559" /></a>
+<a href="http://www.flickr.com/photos/janos/7156995332/" title="Attila Kupas Deak by János Rusiczki, on Flickr"><img src="https://content.rusiczki.net/2012/05/attila-kupas-deak-garage-racing-xco-693x460.jpg" alt="Attila Kupas Deak la Garage Racing XCO" title="Attila Kupas Deak la Garage Racing XCO" width="693" height="460" class="alignnone size-medium wp-image-1559" /></a>
 
 O poza de la concursul XCO organizat acum doua saptamani de <a href="http://www.garageracing.ro">Garage Racing</a> pe Dealul Minei din Baia Sprie.
 
