Blog History category and update to Markdown

--- a/_drafts/2022-12-20-20-in-20.md
+++ b/_drafts/2022-12-20-20-in-20.md
@@ -1,6 +1,8 @@
 ---
 published: false
 title: 20 în 20
+categories:
+- blog history
 ---
 În data de 20 decembrie 2022 s-au împlinit 20 de ani de la prima însemnare pe acest blog.
 
@@ -19,8 +21,3 @@ Am încercat să mă gândesc ce va fi când nu vor mai fi părinții mei dar a 
 Din nou, am zis în treacăt când am trecut pe română pe aici acum 12 ani, dar voi spune mai în detaliu acum că am avut cel puțin alte două bloguri în română: unul despre zona web românească și altul despre turismul din Maramureș. Motivul ca să fac alte bloguri a fost probabil legat de faptul că a fost perioada exploziei blogurilor în România și totodată rețelele sociale nu erau încă omniprezente cum sunt în ziua de azi. Și de ce nu am scris aici acele articole? Un motiv a fost că nu trecusem încă pe română pe aici și cel puțin cel despre turism voiam să rămână cvasi anonim, nu prea doream să fie asociat ceea ce scriam cu numele meu, să nu primesc interdicție pe pârtii sau cine știe ce amenințări. 
 
 Am scris multe articole despre schimbările de pe blog - am încercat să adun totul în această categorie.
-
-- https://www.rusiczki.net/2008/05/29/moved-yes-again/
-- https://www.rusiczki.net/2009/04/02/keeping-up-with-the-times/
-- https://www.rusiczki.net/2013/09/11/zece-ani-de-rusiczki-net/
-- https://www.rusiczki.net/2018/01/08/a-new-blogging-engine/
