--- a/_posts/2003/2003-09-22-building.markdown
+++ b/_posts/2003/2003-09-22-building.markdown
@@ -8,6 +8,6 @@ categories:
 ---
 I mentioned yesterday that I'm working on the Movable Type templates and the rest of the site. Fact is I want to make as much of the site as I can manageable with MT. It's such a nice tool and it's so handy sometimes that you don't have to fire up your good old FTP program each time you want to modify a character on your site...
 
-Looking around a bit on the almighty Internet I found a very good article, <a href="http://a.wholelottanothing.org/features.blah/entry/007162">Beyond the Blog - Powering an entire site with Movable Type</a>, on Matthew Haughey's <a href="http://a.wholelottanothing.org/">site</a>. He had links at the bottom of the article to some other writings on the same matter: <a href="http://www.bradchoate.com/past/001656.php">Brad Choate's Doing your whole site with MT</a> and <a href="http://www.stopdesign.com/log/2003/07/16/rebuilding_a_portfolio.htm">Doug Bowman's Rebuilding a Portfolio (with MT)</a>. I'll also take a closer look at the <a href="http://www.bradchoate.com/past/001653.php">Textile 2 Plugin</a>.
+Looking around a bit on the almighty Internet I found a very good article, [Beyond the Blog - Powering an entire site with Movable Type](http://a.wholelottanothing.org/features.blah/entry/007162), on Matthew Haughey's [site](http://a.wholelottanothing.org/). He had links at the bottom of the article to some other writings on the same matter: [Brad Choate's Doing your whole site with MT](http://www.bradchoate.com/past/001656.php) and [Doug Bowman's Rebuilding a Portfolio (with MT)](http://www.stopdesign.com/log/2003/07/16/rebuilding_a_portfolio.htm). I'll also take a closer look at the [Textile 2 Plugin](http://www.bradchoate.com/past/001653.php).
 
 Posted this as a reference...
