Redactare articol 20 in 20

--- a/_drafts/2022-12-20-20-in-20.md
+++ b/_drafts/2022-12-20-20-in-20.md
@@ -6,18 +6,18 @@ categories:
 ---
 În data de 20 decembrie 2022 s-au împlinit 20 de ani de la prima însemnare pe acest blog.
 
-Am (re-)început atunci într-un subdirector al site-ului resurseweb.net, care a fost un proiect de-al meu dedicat făcutului de bine pentru web-ul românesc emergent. Pe lângă știri, articole și tutoriale acesta a fost site-ul unde am publicat traducerea românească a [phpBB](https://www.phpbb.com/), făcută pe jumate de mine și pe jumate de domnul [Zoso](https://zoso.ro/), pe care îl cunoscusem ori de pe Forumul Computergames (RIP) ori de pe un forum de web development românesc de al cărui nume trebuie să-mi amintesc. După puțin săpat: subdirectorul era /mt/ (Movable Type), l-am găsit cu ajutorul web.archive.org (spre care am și donat bani de câteva ori căci m-a ajutat enorm în demersurile mele de arheolog digital) iar forumul de web development era learn.reflex.ro - pentru asta l-am întrebat pe proprietar: [Andrei Radu Dobre](https://andreiard.ro/).
+Am (re-)început atunci într-un subdirector al site-ului resurseweb.net, care a fost un proiect de-al meu dedicat făcutului de bine pentru web-ul românesc aflat într-o stare emergentă pe atunci. Pe lângă știri, articole și tutoriale acesta a fost site-ul unde am publicat traducerea românească a [phpBB](https://www.phpbb.com/), făcută pe jumate de mine și pe jumate de domnul [Zoso](https://zoso.ro/), pe care îl cunoscusem ori de pe Forumul Computergames (RIP) ori de pe un forum de web development românesc de al cărui nume trebuie să-mi amintesc. După puțin săpat: subdirectorul era /mt/ (Movable Type), l-am găsit cu ajutorul [web.archive.org](https://web.archive.org) (spre care am și donat bani de câteva ori căci m-a ajutat enorm în demersurile mele de arheolog digital) iar forumul de web development era learn.reflex.ro - pentru asta l-am întrebat pe proprietar: [Andrei Radu Dobre](https://andreiard.ro/).
 
-După ce crăpase prima firma, lucrasem de acasă în tot anul acela, era în prag de Crăciun, aveam Internet prin dial-up stabil de la RDS, aparat foto digital și multe-multe lucruri despre care să scriu, așa că am scris. Nu-mi imaginam că peste 20 de ani încă voi mai scrie pe același blog. De fapt nu aveam nici cea mai vagă idee despre ce voi face sau unde voi fi în 20 ani și nici nu-mi amintesc să mă fi gândit deseori la asta.
+După ce crăpase prima firmă, lucrasem de acasă în tot anul acela, era în prag de Crăciun, aveam Internet prin dial-up stabil de la RDS, aparat foto digital și multe-multe lucruri despre care să scriu, așa că am scris. Nu-mi imaginam că peste 20 de ani încă voi mai scrie pe același blog. De fapt nu aveam nici cea mai vagă idee despre ce voi face sau unde voi fi în 20 ani și nici nu-mi amintesc să mă fi gândit deseori la asta.
 
-De fapt eu speram că va fi o utopie, mă gândeam din camera mea din Baia Sprie cât de fain va fi când va avea mai multă lume Internet, cât de informată va fi lumea, chiar voiam să fac un forum pentru Baia Sprie unde să poată lumea să discute și să interacționeze, dar m-am abținut că am văzut în anul când am lucrat la webwebstudio că abia se discuta la nivel de Baia Mare. Oricum, am dat-o la greu în bară cu previziunile mele, căci iată că la distanță de 20 de ani de la aceste idei naive avem rețele sociale care propovăduiesc prostia cu antivaxxeri, flat earth-eri și influenceri cu 2 neuroni. Oamenii au rămas oameni.
+De fapt eu speram că va fi o utopie, mă gândeam stând în camera mea din Baia Sprie cât de fain va fi când va avea mai multă lume Internet, cât de informată va fi lumea, chiar voiam să fac un forum pentru Baia Sprie unde să poată lumea să discute și să interacționeze, dar m-am abținut că am văzut în anul când am lucrat la webwebstudio că abia se discuta la nivel de Baia Mare. Oricum, am dat-o la greu în bară cu previziunile mele, căci iată că la distanță de 20 de ani de la aceste idei naive avem rețele sociale care propovăduiesc prostia cu antivaxxeri, flat earth-eri și influenceri cu 2 neuroni. Oamenii au rămas oameni și mediul a fost deturnat.
 
-Nu mi-am imaginat că voi avea un calculator super puternic în buzunar de pe care voi putea accesa Internetul. Cu toate că atunci când mi-am cumparat primul Palm, am avut așa [o idee sălbatică](https://www.rusiczki.net/2003/04/03/a-wish/) despre cum ar fi de aș avea un server web cu PHP pe el.
+Ce nu mi-am imaginat a fost că voi avea un calculator super puternic în buzunar de pe care voi putea accesa Internetul de aproximativ oriunde. Cu toate că atunci când mi-am cumparat primul Palm, am avut așa [o idee sălbatică](https://www.rusiczki.net/2003/04/03/a-wish/) despre cum ar fi de aș avea un server web cu PHP pe el.
 
-Am încercat să mă gândesc ce va fi când nu vor mai fi părinții mei dar a fost de neimaginat și am hâșăit rapid gândul. Din păcate în doar câțiva ani situația urma să se schimbe în rău și apoi în mai rău...
+Am încercat să mă gândesc ce va fi când nu vor mai fi părinții mei dar a fost de neimaginat și am hâșăit rapid gândul. Din păcate în doar câțiva ani scurți situația urma să se schimbe în rău și apoi în mai rău...
 
-În retrospectiva pe care am scris-o în 2013, odată ce domeniul împlinise 10 ani (wow, la anul va împlini 20!) am menționat că am tot schimbat hosting-uri și servere, dar cumva aia a fost perioada când shared hosting și serverele bare metal erau tot ce era disponibil. Ca să clarific: shared hosting înseamna că ți se alocă un director pe un server alături de alte zeci de site-uri și clienți iar bare metal înseamnă că-ți închiriezi un întreg calculator într-un datacenter. După apariția și adoptarea pe cloud-ului pe scară larga blogul a rămas multă vreme tot pe bare metal-ul de la Hetzner, pana am trecut pe un alt server fizic de la un provider franțuzesc numit online.net. online.net au fost cumpărați apoi de Scaleway și abia foarte recent, de un an jumate, am mutat site-ul pe o instanță de cloud de la Scaleway. Ca să clarific din nou, când spunem cloud, vorbim în general de mașini virtuale - ție ți se pare că ai un întreg server de-al tău dar e de fapt o mașină virtuală hostată pe un calculator puternic alături de alte mașini virtuale. De fapt nu mai pretind că aș înțelege ce e în spatele infrastructurilor IT ale zilelor noastre.
+În retrospectiva pe care am scris-o în 2013, odată ce domeniul împlinise 10 ani (wow, la anul va împlini 20!) am menționat că am tot schimbat hosting-uri și servere, dar cumva aia a fost perioada când shared hosting și serverele bare metal erau tot ce era disponibil. Ca să clarific: shared hosting înseamna că ți se alocă un director pe un server alături de alte zeci de site-uri și clienți iar bare metal înseamnă că-ți închiriezi un întreg calculator într-un datacenter. După apariția și adoptarea pe cloud-ului pe scară larga blogul a rămas multă vreme tot pe bare metal-ul de la Hetzner, pana am trecut pe un alt server fizic de la un provider franțuzesc numit online.net. online.net au fost apoi cumpărați de Scaleway și abia foarte recent, de un an jumate, am mutat site-ul pe o instanță de cloud de la Scaleway. Ca să clarific din nou, când spunem cloud, vorbim în general despre mașini virtuale - ție ți se pare că ai un întreg server de-al tău dar e de fapt o mașină virtuală hostată pe un calculator puternic alături de alte mașini virtuale. De fapt nu mai pretind că aș înțelege ce e în spatele infrastructurilor IT ale zilelor noastre.
 
-Din nou, am zis în treacăt când am trecut pe română pe aici acum 12 ani, dar voi spune mai în detaliu acum că am avut cel puțin alte două bloguri în română: unul despre zona web românească și altul despre turismul din Maramureș. Motivul ca să fac alte bloguri a fost probabil legat de faptul că a fost perioada exploziei blogurilor în România și totodată rețelele sociale nu erau încă omniprezente cum sunt în ziua de azi. Și de ce nu am scris aici acele articole? Un motiv a fost că nu trecusem încă pe română pe aici și cel puțin cel despre turism voiam să rămână cvasi anonim, nu prea doream să fie asociat ceea ce scriam cu numele meu, să nu primesc interdicție pe pârtii sau cine știe ce amenințări. 
+Am zis în treacăt când am trecut pe română pe aici acum 12 ani, dar voi spune acum mai în detaliu că am avut cel puțin alte două bloguri în română: unul despre zona web românească și altul despre turismul din Maramureș. Motivul ca să fac alte bloguri a fost probabil legat de faptul că a fost perioada exploziei blogurilor în România și totodată rețelele sociale nu erau încă omniprezente cum sunt în ziua de azi. Și de ce nu am scris aici acele articole? Un motiv a fost că nu trecusem încă pe română pe aici și cel puțin cel despre turism voiam să rămână cvasi anonim, nu prea doream să fie asociat numele meu cu ceea ce scriam, să nu primesc interdicție pe pârtii sau cine știe ce amenințări. 
 
-Am scris multe articole despre schimbările de pe blog - am încercat să adun totul în această categorie.
+Am scris multe articole despre schimbările de pe blog - și cu un efort de câteva ore am reușit să le adun toate în [această categorie](http://www.rusiczki.net/category/blog-history). Spor la citit.
