--- a/_drafts/2022-12-20-20-in-20.md
+++ b/_drafts/2022-12-20-20-in-20.md
@@ -12,7 +12,7 @@ După ce crăpase prima firmă, lucrasem de acasă în tot anul acela, era în p
 
 De fapt eu speram că va fi o utopie, mă gândeam stând în camera mea din Baia Sprie cât de fain va fi când va avea mai multă lume Internet, cât de informată va fi lumea, chiar voiam să fac un forum pentru Baia Sprie unde să poată lumea să discute și să interacționeze, dar m-am abținut că am văzut în anul când am lucrat la webwebstudio că abia se discuta la nivel de Baia Mare. Oricum, am dat-o la greu în bară cu previziunile mele, căci iată că la distanță de 20 de ani de la aceste idei naive avem rețele sociale care propovăduiesc prostia cu antivaxxeri, flat earth-eri și influenceri cu 2 neuroni. Oamenii au rămas oameni și mediul a fost deturnat.
 
-Ce nu mi-am imaginat a fost că voi avea un calculator super puternic în buzunar de pe care voi putea accesa Internetul de aproximativ oriunde. Cu toate că atunci când mi-am cumparat primul Palm, am avut așa [o idee sălbatică](https://www.rusiczki.net/2003/04/03/a-wish/) despre cum ar fi de aș avea un server web cu PHP pe el.
+Ce nu mi-am imaginat a fost că voi avea un calculator super puternic în buzunar de pe care voi putea accesa Internetul de aproximativ oriunde. Cu toate că atunci când mi-am cumparat primul Palm, am avut așa [o idee sălbatică](https://www.rusiczki.net/2003/04/03/a-wish/) despre cum ar fi de aș avea un server web cu PHP pe el. Nici că voi putea viziona filme și să ascult orice muzică legal nu prea mi-am imaginat...
 
 Am încercat să mă gândesc ce va fi când nu vor mai fi părinții mei dar a fost de neimaginat și am hâșăit rapid gândul. Din păcate în doar câțiva ani scurți situația urma să se schimbe în rău și apoi în mai rău...
 
