--- a/_posts/2022/2022-12-20-20-in-20.markdown
+++ b/_posts/2022/2022-12-20-20-in-20.markdown
@@ -4,11 +4,12 @@ title: 20 în 20
 date: 2022-12-20 21:00:00.000000000 +02:00
 categories:
 - blog history
-description: Articol comemorativ cu ocazia că în data de 20 decembrie 2022 s-au împlinit 20 de ani de la prima însemnare pe acest weblog.
+description: Articol aniversar cu ocazia că în data de 20 decembrie 2022 s-au împlinit 20 de ani de la prima însemnare pe acest weblog.
+image: https://content.rusiczki.net/2022/12/weblog-screenshot-2003-10-27.png
 ---
 În data de 20 decembrie 2022 s-au împlinit 20 de ani de la prima însemnare pe acest blog.
 
-![Screenshot al blogului meu așa cum arată pe 7 februarie 2003](https://content.rusiczki.net/2022/12/my-weblog-screenshot-2003-02-07.png)
+![Captură de ecran a blogului meu așa cum arată pe 7 februarie 2003](https://content.rusiczki.net/2022/12/weblog-screenshot-2003-02-07.png)
 
 Am (re-)început atunci într-un subdirector al site-ului resurseweb.net, care a fost un proiect de-al meu dedicat făcutului de bine pentru web-ul românesc aflat într-o stare emergentă pe atunci. Pe lângă știri, articole și tutoriale acesta a fost site-ul unde am publicat traducerea românească a [phpBB](https://www.phpbb.com/), făcută pe jumate de mine și pe jumate de domnul [Zoso](https://zoso.ro/), pe care îl cunoscusem ori de pe Forumul Computergames (RIP) ori de pe un forum de web development românesc de al cărui nume trebuie să-mi amintesc. După puțin săpat: subdirectorul era /mt/ (Movable Type), l-am găsit cu ajutorul [web.archive.org](https://web.archive.org) (spre care am și donat bani de câteva ori căci m-a ajutat enorm în demersurile mele de arheolog digital) iar forumul de web development era learn.reflex.ro - pentru asta l-am întrebat pe proprietar: [Andrei Radu Dobre](https://andreiard.ro/).
 
@@ -20,9 +21,11 @@ Ce nu mi-am imaginat a fost că voi avea un calculator super puternic în buzuna
 
 Am încercat să mă gândesc ce va fi când nu vor mai fi părinții mei dar a fost de neimaginat și am hâșăit rapid gândul. Din păcate în doar câțiva ani scurți situația urma să se schimbe în rău și apoi în mai rău...
 
-
+![Captură de ecran a blogului meu așa cum arată pe 27 octombrie 2003](https://content.rusiczki.net/2022/12/weblog-screenshot-2003-10-27.png)
 
 În retrospectiva pe care am scris-o în 2013, odată ce domeniul împlinise 10 ani (wow, la anul va împlini 20!) am menționat că am tot schimbat hosting-uri și servere, dar cumva aia a fost perioada când shared hosting și serverele bare metal erau tot ce era disponibil. Ca să clarific: shared hosting înseamna că ți se alocă un director pe un server alături de alte zeci de site-uri și clienți iar bare metal înseamnă că-ți închiriezi un întreg calculator într-un datacenter. După apariția și adoptarea pe cloud-ului pe scară larga blogul a rămas multă vreme tot pe bare metal-ul de la Hetzner, pana am trecut pe un alt server fizic de la un provider franțuzesc numit online.net. online.net au fost apoi cumpărați de Scaleway și abia foarte recent, de un an jumate, am mutat site-ul pe o instanță de cloud de la Scaleway. Ca să clarific din nou, când spunem cloud, vorbim în general despre mașini virtuale - ție ți se pare că ai un întreg server de-al tău dar e de fapt o mașină virtuală hostată pe un calculator puternic alături de alte mașini virtuale. De fapt nu mai pretind că aș înțelege ce e în spatele infrastructurilor IT ale zilelor noastre.
+
+![Captură de ecran a blogului meu așa cum arată pe 10 aprilie 2009](https://content.rusiczki.net/2022/12/weblog-screenshot-2009-04-10.png)
 
 Am zis în treacăt când am trecut pe română pe aici acum 12 ani, dar voi spune acum mai în detaliu că am avut cel puțin alte două bloguri în română: unul despre zona web românească și altul despre turismul din Maramureș. Motivul ca să fac alte bloguri a fost probabil legat de faptul că a fost perioada exploziei blogurilor în România și totodată rețelele sociale nu erau încă omniprezente cum sunt în ziua de azi. Și de ce nu am scris aici acele articole? Un motiv a fost că nu trecusem încă pe română pe aici și cel puțin cel despre turism voiam să rămână cvasi anonim, nu prea doream să fie asociat numele meu cu ceea ce scriam, să nu primesc interdicție pe pârtii sau cine știe ce amenințări. 
 
