--- a/_posts/2025/2025-05-08-carti.markdown
+++ b/_posts/2025/2025-05-08-carti.markdown
@@ -11,7 +11,7 @@ description: Istoricul meu ca cititor de cărți și revenirea(?) la cărțile f
 
 În jurul Paștelui a fost pe acasă un amic din copilărie de-al soției, vecin de-al ei, un om cu care am socializat destul de mult înainte să-și ia catrafusele și să plece în Germania acum vreo 10 ani. Și, lucru total necaracteristic nouă, am ieșit într-o seară de vineri în oraș să stăm la o poveste cu el. Normal că la vârsta asta subiectul principal abordat a fost politica dar s-au mai strecurat și altele, și printre aceste "altele" omul a menționat că el nu poate ieși dintr-o librărie fără minim 3 cărți în mână, are o problemă că nu-i mai ajung bibliotecile prin casă și că un moment bun de citit îl consideră dimineața la cafea.
 
-Nu știu cât am menționat aici pe blog dar eu am avut hobby-ul cititului din fragedă tinerețe, îmi amintesc foarte bine că prima carte pe care am citit-o a fost Vrăjitorul din Oz. Am început probabil mai târziu decât e tipic și am citit cartea în maghiară cu toate că eu nu am învățat niciodată maghiară la școală. Dar având în vedere că vorbeam maghiară cu părinții pe acasă (a se citi: maghiara mi-a fost limba maternă), în clasa întâia mă punea tata ca după ce-mi terminam temele să mai fac și câte o lecție din abecedarul unguresc. Vai cât l-am urât pentru asta în acel moment și cât l-am apreciat după. În continuare am citit felurite cărți în maghiară dedicate atât adolescenților cât și copiilor. După revoluție am încercat să-mi cumpăr cârți sci-fi, în mare parte ghidat după titlu sau după grafica de pe copertă, ceea ce s-a dovedit a nu fi o chestie foarte inspirată.
+Nu știu cât am menționat aici pe blog dar eu am avut hobby-ul cititului din fragedă tinerețe, îmi amintesc foarte bine că prima carte pe care am citit-o a fost [Vrăjitorul din Oz](https://content.rusiczki.net/2025/05/oz-a-nagy-varazslo-kriterion.jpg){:.glightbox}. Am început probabil mai târziu decât e tipic și am citit cartea în maghiară cu toate că eu nu am învățat niciodată maghiară la școală. Dar având în vedere că vorbeam maghiară cu părinții pe acasă (a se citi: maghiara mi-a fost limba maternă), în clasa întâia mă punea tata ca după ce-mi terminam temele să mai fac și câte o lecție din abecedarul unguresc. Vai cât l-am urât pentru asta în acel moment și cât l-am apreciat după. În continuare am citit felurite cărți în maghiară dedicate atât adolescenților cât și copiilor. După revoluție am încercat să-mi cumpăr cârți sci-fi, în mare parte ghidat după titlu sau după grafica de pe copertă, ceea ce s-a dovedit a nu fi o chestie foarte inspirată.
 
 Liceul a primit pare-mi-se în clasa a IX-a o donație de cărți de la Nemira și astfel nu am reușit să citesc mai nimic din programă căci descoperisem cărțile lejere, mult mai ușor de citit decât vechiturile obligatorii pentru școală. Și am rămas pe linia asta, câteodată citind pe ascuns în loc să-mi fac temele, căci deh, ADD-ul și procrastinarea au fost foarte pronunțate la mine încă de pe atunci. **Update din timpul redactării:** După ce am scris astea, am discutat cu un fost coleg de clasă și el este de părere că donația s-ar fi întâmplat mai târziu, cândva prin clasa a XI-a, ceea ce e plauzibil dintr-un punct de vedere, că-mi amintesc că ne-am dus să ne-am dus cu încredere să ne alegem cărți din respectiva donație și nu cu dezorientarea specifice clasei a IX-a. Totodată, nu sunt sigur pentru că:
 
@@ -41,7 +41,7 @@ Dar după o vizită la Cărturești în timp ce așteptam după fast food, o că
 
 [![Cărți Stephen King după prima comandă](https://content.rusiczki.net/2025/05/carti-stephen-king-comanda-1000x667.jpg)](https://content.rusiczki.net/2025/05/carti-stephen-king-comanda.jpg){:.glightbox}
 
-Când am dat comanda m-am întrebat dacă aș primi discount mai mare de la Nemira dacă le-aș arată că mai am cataloagele lor de la începutul anilor '90. 🙂
+Când am dat comanda m-am întrebat dacă aș primi discount mai mare de la Nemira dacă le-aș arată că mai am cataloagele lor de la începutul anilor '90. 🙂 Căci mai câte ceva: [o anexă la ofertă](https://content.rusiczki.net/2025/05/clubul-cartii-nemira-anexa-oferta.jpg){:.glightbox} (oferta am folosit-o probabil să-mi comand ceva), [o reclamă pentru abonament la anumite colecții](https://content.rusiczki.net/2025/05/clubul-cartii-nemira-abonament.jpg){:.glightbox} (oare de ce am bifat tocmai Dicționarele?) și [un calendar Nemira din 1996](https://content.rusiczki.net/2025/05/calendar-nemira-1996.jpg){:.glightbox}.
 
 A fost interesant să citesc alternat Mr Mercedes în engleză pe Kindle și în română din cartea fizică. Am și descoperit câteva erori în traducere dar nimic prea critic și dureros. Ah, și am redescoperit că pe cărțile fizice nu primesc notificări care să mă distragă (ce-i drept nici pe Kindle) și acel sentiment plăcut că dacă citesc ceva ce mă captivează mi se pune în mișcare imaginația.
 
